app/parser/tmParser.py
# Generated from C:\Users\Andrew\Documents\Gitrepos\COMP\ajarnagi\project2\app\parser\tm.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys


class tmParser ( Parser ):

    grammarFileName = "tm.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "<INVALID>", "<INVALID>", "'{'", 
                     "'}'", "':'", "','", "'states'", "'start'", "'accept'", 
                     "'reject'", "'alpha'", "'tape-alpha'", "'rwRt'", "'rwLt'", 
                     "'rRl'", "'rLl'", "'rRt'", "'rLt'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "COMMENT", "WS", "INIL", 
                      "INIR", "COL", "SEP", "STATES", "START", "ACCEPT", 
                      "REJECT", "ALPHA", "TALPHA", "RWRT", "RWLT", "RRL", 
                      "RLL", "RRT", "RLT", "NAME", "ALPHACHAR", "CHAR" ]

    RULE_alphalist = 0
    RULE_alphasymbol = 1
    RULE_inittitle = 2
    RULE_rl = 3
    RULE_rt = 4
    RULE_rwt = 5
    RULE_statelist = 6
    RULE_statename = 7
    RULE_transfunc = 8
    RULE_translist = 9
    RULE_transtitle = 10
    RULE_init = 11
    RULE_states = 12
    RULE_start = 13
    RULE_accept = 14
    RULE_reject = 15
    RULE_alpha = 16
    RULE_talpha = 17
    RULE_transition = 18

    ruleNames =  [ "alphalist", "alphasymbol", "inittitle", "rl", "rt", 
                   "rwt", "statelist", "statename", "transfunc", "translist", 
                   "transtitle", "init", "states", "start", "accept", "reject", 
                   "alpha", "talpha", "transition" ]

    EOF = Token.EOF
    T__0=1
    COMMENT=2
    WS=3
    INIL=4
    INIR=5
    COL=6
    SEP=7
    STATES=8
    START=9
    ACCEPT=10
    REJECT=11
    ALPHA=12
    TALPHA=13
    RWRT=14
    RWLT=15
    RRL=16
    RLL=17
    RRT=18
    RLT=19
    NAME=20
    ALPHACHAR=21
    CHAR=22

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class AlphalistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def alphasymbol(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tmParser.AlphasymbolContext)
            else:
                return self.getTypedRuleContext(tmParser.AlphasymbolContext,i)


        def SEP(self, i:int=None):
            if i is None:
                return self.getTokens(tmParser.SEP)
            else:
                return self.getToken(tmParser.SEP, i)

        def getRuleIndex(self):
            return tmParser.RULE_alphalist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlphalist" ):
                listener.enterAlphalist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlphalist" ):
                listener.exitAlphalist(self)




    def alphalist(self):

        localctx = tmParser.AlphalistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_alphalist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.alphasymbol()
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==tmParser.SEP:
                self.state = 39
                self.match(tmParser.SEP)
                self.state = 40
                self.alphasymbol()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AlphasymbolContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CHAR(self):
            return self.getToken(tmParser.CHAR, 0)

        def ALPHACHAR(self):
            return self.getToken(tmParser.ALPHACHAR, 0)

        def INIL(self):
            return self.getToken(tmParser.INIL, 0)

        def INIR(self):
            return self.getToken(tmParser.INIR, 0)

        def COL(self):
            return self.getToken(tmParser.COL, 0)

        def SEP(self):
            return self.getToken(tmParser.SEP, 0)

        def getRuleIndex(self):
            return tmParser.RULE_alphasymbol

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlphasymbol" ):
                listener.enterAlphasymbol(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlphasymbol" ):
                listener.exitAlphasymbol(self)




    def alphasymbol(self):

        localctx = tmParser.AlphasymbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_alphasymbol)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << tmParser.INIL) | (1 << tmParser.INIR) | (1 << tmParser.COL) | (1 << tmParser.SEP) | (1 << tmParser.ALPHACHAR) | (1 << tmParser.CHAR))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InittitleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STATES(self):
            return self.getToken(tmParser.STATES, 0)

        def START(self):
            return self.getToken(tmParser.START, 0)

        def ACCEPT(self):
            return self.getToken(tmParser.ACCEPT, 0)

        def REJECT(self):
            return self.getToken(tmParser.REJECT, 0)

        def ALPHA(self):
            return self.getToken(tmParser.ALPHA, 0)

        def TALPHA(self):
            return self.getToken(tmParser.TALPHA, 0)

        def getRuleIndex(self):
            return tmParser.RULE_inittitle

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInittitle" ):
                listener.enterInittitle(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInittitle" ):
                listener.exitInittitle(self)




    def inittitle(self):

        localctx = tmParser.InittitleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_inittitle)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << tmParser.STATES) | (1 << tmParser.START) | (1 << tmParser.ACCEPT) | (1 << tmParser.REJECT) | (1 << tmParser.ALPHA) | (1 << tmParser.TALPHA))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RlContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statename(self):
            return self.getTypedRuleContext(tmParser.StatenameContext,0)


        def alphasymbol(self):
            return self.getTypedRuleContext(tmParser.AlphasymbolContext,0)


        def RRL(self):
            return self.getToken(tmParser.RRL, 0)

        def RLL(self):
            return self.getToken(tmParser.RLL, 0)

        def getRuleIndex(self):
            return tmParser.RULE_rl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRl" ):
                listener.enterRl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRl" ):
                listener.exitRl(self)




    def rl(self):

        localctx = tmParser.RlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_rl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            _la = self._input.LA(1)
            if not(_la==tmParser.RRL or _la==tmParser.RLL):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 51
            self.statename()
            self.state = 52
            self.alphasymbol()
            self.state = 53
            self.match(tmParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statename(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tmParser.StatenameContext)
            else:
                return self.getTypedRuleContext(tmParser.StatenameContext,i)


        def alphasymbol(self):
            return self.getTypedRuleContext(tmParser.AlphasymbolContext,0)


        def RRT(self):
            return self.getToken(tmParser.RRT, 0)

        def RLT(self):
            return self.getToken(tmParser.RLT, 0)

        def getRuleIndex(self):
            return tmParser.RULE_rt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRt" ):
                listener.enterRt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRt" ):
                listener.exitRt(self)




    def rt(self):

        localctx = tmParser.RtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_rt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            _la = self._input.LA(1)
            if not(_la==tmParser.RRT or _la==tmParser.RLT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 56
            self.statename()
            self.state = 57
            self.alphasymbol()
            self.state = 58
            self.statename()
            self.state = 59
            self.match(tmParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RwtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statename(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tmParser.StatenameContext)
            else:
                return self.getTypedRuleContext(tmParser.StatenameContext,i)


        def alphasymbol(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tmParser.AlphasymbolContext)
            else:
                return self.getTypedRuleContext(tmParser.AlphasymbolContext,i)


        def RWRT(self):
            return self.getToken(tmParser.RWRT, 0)

        def RWLT(self):
            return self.getToken(tmParser.RWLT, 0)

        def getRuleIndex(self):
            return tmParser.RULE_rwt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRwt" ):
                listener.enterRwt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRwt" ):
                listener.exitRwt(self)




    def rwt(self):

        localctx = tmParser.RwtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_rwt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            _la = self._input.LA(1)
            if not(_la==tmParser.RWRT or _la==tmParser.RWLT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 62
            self.statename()
            self.state = 63
            self.alphasymbol()
            self.state = 64
            self.alphasymbol()
            self.state = 65
            self.statename()
            self.state = 66
            self.match(tmParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatelistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statename(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tmParser.StatenameContext)
            else:
                return self.getTypedRuleContext(tmParser.StatenameContext,i)


        def SEP(self, i:int=None):
            if i is None:
                return self.getTokens(tmParser.SEP)
            else:
                return self.getToken(tmParser.SEP, i)

        def getRuleIndex(self):
            return tmParser.RULE_statelist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatelist" ):
                listener.enterStatelist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatelist" ):
                listener.exitStatelist(self)




    def statelist(self):

        localctx = tmParser.StatelistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statelist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.statename()
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==tmParser.SEP:
                self.state = 69
                self.match(tmParser.SEP)
                self.state = 70
                self.statename()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatenameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(tmParser.NAME, 0)

        def ALPHACHAR(self):
            return self.getToken(tmParser.ALPHACHAR, 0)

        def inittitle(self):
            return self.getTypedRuleContext(tmParser.InittitleContext,0)


        def transtitle(self):
            return self.getTypedRuleContext(tmParser.TranstitleContext,0)


        def getRuleIndex(self):
            return tmParser.RULE_statename

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatename" ):
                listener.enterStatename(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatename" ):
                listener.exitStatename(self)




    def statename(self):

        localctx = tmParser.StatenameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statename)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [tmParser.NAME]:
                self.state = 76
                self.match(tmParser.NAME)
                pass
            elif token in [tmParser.ALPHACHAR]:
                self.state = 77
                self.match(tmParser.ALPHACHAR)
                pass
            elif token in [tmParser.STATES, tmParser.START, tmParser.ACCEPT, tmParser.REJECT, tmParser.ALPHA, tmParser.TALPHA]:
                self.state = 78
                self.inittitle()
                pass
            elif token in [tmParser.RWRT, tmParser.RWLT, tmParser.RRL, tmParser.RLL, tmParser.RRT, tmParser.RLT]:
                self.state = 79
                self.transtitle()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TransfuncContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rl(self):
            return self.getTypedRuleContext(tmParser.RlContext,0)


        def rt(self):
            return self.getTypedRuleContext(tmParser.RtContext,0)


        def rwt(self):
            return self.getTypedRuleContext(tmParser.RwtContext,0)


        def getRuleIndex(self):
            return tmParser.RULE_transfunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTransfunc" ):
                listener.enterTransfunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTransfunc" ):
                listener.exitTransfunc(self)




    def transfunc(self):

        localctx = tmParser.TransfuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_transfunc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [tmParser.RRL, tmParser.RLL]:
                self.state = 82
                self.rl()
                pass
            elif token in [tmParser.RRT, tmParser.RLT]:
                self.state = 83
                self.rt()
                pass
            elif token in [tmParser.RWRT, tmParser.RWLT]:
                self.state = 84
                self.rwt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TranslistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def transfunc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tmParser.TransfuncContext)
            else:
                return self.getTypedRuleContext(tmParser.TransfuncContext,i)


        def getRuleIndex(self):
            return tmParser.RULE_translist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTranslist" ):
                listener.enterTranslist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTranslist" ):
                listener.exitTranslist(self)




    def translist(self):

        localctx = tmParser.TranslistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_translist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << tmParser.RWRT) | (1 << tmParser.RWLT) | (1 << tmParser.RRL) | (1 << tmParser.RLL) | (1 << tmParser.RRT) | (1 << tmParser.RLT))) != 0):
                self.state = 87
                self.transfunc()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TranstitleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RWRT(self):
            return self.getToken(tmParser.RWRT, 0)

        def RWLT(self):
            return self.getToken(tmParser.RWLT, 0)

        def RRL(self):
            return self.getToken(tmParser.RRL, 0)

        def RLL(self):
            return self.getToken(tmParser.RLL, 0)

        def RRT(self):
            return self.getToken(tmParser.RRT, 0)

        def RLT(self):
            return self.getToken(tmParser.RLT, 0)

        def getRuleIndex(self):
            return tmParser.RULE_transtitle

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTranstitle" ):
                listener.enterTranstitle(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTranstitle" ):
                listener.exitTranstitle(self)




    def transtitle(self):

        localctx = tmParser.TranstitleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_transtitle)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << tmParser.RWRT) | (1 << tmParser.RWLT) | (1 << tmParser.RRL) | (1 << tmParser.RLL) | (1 << tmParser.RRT) | (1 << tmParser.RLT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def states(self):
            return self.getTypedRuleContext(tmParser.StatesContext,0)


        def start(self):
            return self.getTypedRuleContext(tmParser.StartContext,0)


        def accept(self):
            return self.getTypedRuleContext(tmParser.AcceptContext,0)


        def reject(self):
            return self.getTypedRuleContext(tmParser.RejectContext,0)


        def alpha(self):
            return self.getTypedRuleContext(tmParser.AlphaContext,0)


        def talpha(self):
            return self.getTypedRuleContext(tmParser.TalphaContext,0)


        def transition(self):
            return self.getTypedRuleContext(tmParser.TransitionContext,0)


        def getRuleIndex(self):
            return tmParser.RULE_init

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInit" ):
                listener.enterInit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInit" ):
                listener.exitInit(self)




    def init(self):

        localctx = tmParser.InitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_init)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.states()
            self.state = 96
            self.start()
            self.state = 97
            self.accept()
            self.state = 98
            self.reject()
            self.state = 99
            self.alpha()
            self.state = 100
            self.talpha()
            self.state = 101
            self.transition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INIL(self):
            return self.getToken(tmParser.INIL, 0)

        def STATES(self):
            return self.getToken(tmParser.STATES, 0)

        def COL(self):
            return self.getToken(tmParser.COL, 0)

        def statelist(self):
            return self.getTypedRuleContext(tmParser.StatelistContext,0)


        def INIR(self):
            return self.getToken(tmParser.INIR, 0)

        def getRuleIndex(self):
            return tmParser.RULE_states

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStates" ):
                listener.enterStates(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStates" ):
                listener.exitStates(self)




    def states(self):

        localctx = tmParser.StatesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_states)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(tmParser.INIL)
            self.state = 104
            self.match(tmParser.STATES)
            self.state = 105
            self.match(tmParser.COL)
            self.state = 106
            self.statelist()
            self.state = 107
            self.match(tmParser.INIR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INIL(self):
            return self.getToken(tmParser.INIL, 0)

        def START(self):
            return self.getToken(tmParser.START, 0)

        def COL(self):
            return self.getToken(tmParser.COL, 0)

        def INIR(self):
            return self.getToken(tmParser.INIR, 0)

        def NAME(self):
            return self.getToken(tmParser.NAME, 0)

        def CHAR(self):
            return self.getToken(tmParser.CHAR, 0)

        def getRuleIndex(self):
            return tmParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = tmParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(tmParser.INIL)
            self.state = 110
            self.match(tmParser.START)
            self.state = 111
            self.match(tmParser.COL)
            self.state = 112
            _la = self._input.LA(1)
            if not(_la==tmParser.NAME or _la==tmParser.CHAR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 113
            self.match(tmParser.INIR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AcceptContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INIL(self):
            return self.getToken(tmParser.INIL, 0)

        def ACCEPT(self):
            return self.getToken(tmParser.ACCEPT, 0)

        def COL(self):
            return self.getToken(tmParser.COL, 0)

        def statelist(self):
            return self.getTypedRuleContext(tmParser.StatelistContext,0)


        def INIR(self):
            return self.getToken(tmParser.INIR, 0)

        def getRuleIndex(self):
            return tmParser.RULE_accept

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccept" ):
                listener.enterAccept(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccept" ):
                listener.exitAccept(self)




    def accept(self):

        localctx = tmParser.AcceptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_accept)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(tmParser.INIL)
            self.state = 116
            self.match(tmParser.ACCEPT)
            self.state = 117
            self.match(tmParser.COL)
            self.state = 118
            self.statelist()
            self.state = 119
            self.match(tmParser.INIR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RejectContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INIL(self):
            return self.getToken(tmParser.INIL, 0)

        def REJECT(self):
            return self.getToken(tmParser.REJECT, 0)

        def COL(self):
            return self.getToken(tmParser.COL, 0)

        def statelist(self):
            return self.getTypedRuleContext(tmParser.StatelistContext,0)


        def INIR(self):
            return self.getToken(tmParser.INIR, 0)

        def getRuleIndex(self):
            return tmParser.RULE_reject

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReject" ):
                listener.enterReject(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReject" ):
                listener.exitReject(self)




    def reject(self):

        localctx = tmParser.RejectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_reject)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(tmParser.INIL)
            self.state = 122
            self.match(tmParser.REJECT)
            self.state = 123
            self.match(tmParser.COL)
            self.state = 124
            self.statelist()
            self.state = 125
            self.match(tmParser.INIR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AlphaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INIL(self):
            return self.getToken(tmParser.INIL, 0)

        def ALPHA(self):
            return self.getToken(tmParser.ALPHA, 0)

        def COL(self):
            return self.getToken(tmParser.COL, 0)

        def alphalist(self):
            return self.getTypedRuleContext(tmParser.AlphalistContext,0)


        def INIR(self):
            return self.getToken(tmParser.INIR, 0)

        def getRuleIndex(self):
            return tmParser.RULE_alpha

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlpha" ):
                listener.enterAlpha(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlpha" ):
                listener.exitAlpha(self)




    def alpha(self):

        localctx = tmParser.AlphaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_alpha)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(tmParser.INIL)
            self.state = 128
            self.match(tmParser.ALPHA)
            self.state = 129
            self.match(tmParser.COL)
            self.state = 130
            self.alphalist()
            self.state = 131
            self.match(tmParser.INIR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TalphaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INIL(self):
            return self.getToken(tmParser.INIL, 0)

        def TALPHA(self):
            return self.getToken(tmParser.TALPHA, 0)

        def COL(self):
            return self.getToken(tmParser.COL, 0)

        def alphalist(self):
            return self.getTypedRuleContext(tmParser.AlphalistContext,0)


        def INIR(self):
            return self.getToken(tmParser.INIR, 0)

        def getRuleIndex(self):
            return tmParser.RULE_talpha

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTalpha" ):
                listener.enterTalpha(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTalpha" ):
                listener.exitTalpha(self)




    def talpha(self):

        localctx = tmParser.TalphaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_talpha)
        try:
